<resources>
    <string name="app_name">Short News</string>
    <string name="no_news">No news found\nTry others sources</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="refresh">Refresh</string>
    <string name="settings_title">News Sources</string>
    <string name="settings_menu_item">Sources</string>

    <string name="settings_order_by_label">All News Sources</string>
    <string name="settings_order_by_label_sport">Sport News</string>
    <string name="settings_order_by_label_tech">Technology News</string>
    <string name="settings_order_by_label_general">General News</string>
    <string name="settings_order_by_label_business">Business News</string>
    <string name="settings_order_by_label_politics">Politics News</string>
    <string name="settings_order_by_label_enter">Entertainment News</string>
    <string name="settings_order_by_label_gaming">Gaming News</string>
    <string name="settings_order_by_label_music">Music News</string>
    <string name="settings_order_by_label_science">Science and Nature News</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_abc_value</string>
    <string name="settings_order_by_default_sport" translatable="false">@string/settings_order_by_sport_value</string>
    <string name="settings_order_by_default_tech" translatable="false">@string/settings_order_by_ars_value</string>
    <string name="settings_order_by_default_general" translatable="false">@string/settings_order_by_abc_value</string>
    <string name="settings_order_by_default_business" translatable="false">@string/settings_order_by_bloom_value</string>
    <string name="settings_order_by_default_political" translatable="false">@string/settings_order_by_breit_value</string>
    <string name="settings_order_by_default_gaming" translatable="false">@string/settings_order_by_ign_value</string>
    <string name="settings_order_by_default_music" translatable="false">@string/settings_order_by_mtv_value</string>
    <string name="settings_order_by_default_entertainment" translatable="false">@string/settings_order_by_buzz_value</string>
    <string name="settings_order_by_default_science" translatable="false">@string/settings_order_by_nat_value</string>

    <string name="settings_order_by_abc_label">ABC News(AU)</string>
    <string name="settings_order_by_abc_value" translatable="false">abc-news-au</string>
    <string name="settings_order_by_ars_label">Ars Technica</string>
    <string name="settings_order_by_ars_value" translatable="false">ars-technica</string>
    <string name="settings_order_by_al_label">Al Jazeera English</string>
    <string name="settings_order_by_al_value" translatable="false">al-jazeera-english</string>
    <string name="settings_order_by_ass_label">Associated Press</string>
    <string name="settings_order_by_ass_value" translatable="false">associated-press</string>
    <string name="settings_order_by_bbc_label">BBC News</string>
    <string name="settings_order_by_bbc_value" translatable="false">bbc-news</string>
    <string name="settings_order_by_sport_label">BBC Sport</string>
    <string name="settings_order_by_sport_value" translatable="false">bbc-sport</string>
    <string name="settings_order_by_bloom_label">Bloomberg</string>
    <string name="settings_order_by_bloom_value" translatable="false">bloomberg</string>
    <string name="settings_order_by_breit_label">Breitbart News</string>
    <string name="settings_order_by_breit_value" translatable="false">breitbart-news</string>
    <string name="settings_order_by_insider_label">Business Insider</string>
    <string name="settings_order_by_insider_value" translatable="false">business-insider</string>
    <string name="settings_order_by_buzz_label">Buzzfeed</string>
    <string name="settings_order_by_buzz_value" translatable="false">buzzfeed</string>
    <string name="settings_order_by_cnbc_label">CNBC</string>
    <string name="settings_order_by_cnbc_value" translatable="false">cnbc</string>
    <string name="settings_order_by_cnn_label">CNN</string>
    <string name="settings_order_by_cnn_value" translatable="false">cnn</string>
    <string name="settings_order_by_mail_label">Daily Mail</string>
    <string name="settings_order_by_mail_value" translatable="false">daily-mail</string>
    <string name="settings_order_by_eng_label">Engadget</string>
    <string name="settings_order_by_eng_value" translatable="false">engadget</string>
    <string name="settings_order_by_ent_label">Entertainment Weekly</string>
    <string name="settings_order_by_ent_value" translatable="false">entertainment-weekly</string>
    <string name="settings_order_by_espn_label">ESPN</string>
    <string name="settings_order_by_espn_value" translatable="false">espn</string>
    <string name="settings_order_by_espn1_label">ESPN Cric Info</string>
    <string name="settings_order_by_espn1_value" translatable="false">espn-cric-info</string>
    <string name="settings_order_by_fin_label">Financial Times</string>
    <string name="settings_order_by_fin_value" translatable="false">financial-times</string>
    <string name="settings_order_by_itali_label">Football Italia</string>
    <string name="settings_order_by_itali_value" translatable="false">football-italia</string>
    <string name="settings_order_by_fortune_label">Fortune</string>
    <string name="settings_order_by_fortune_value" translatable="false">fortune</string>
    <string name="settings_order_by_four_label">FourFourTwo</string>
    <string name="settings_order_by_four_value" translatable="false">four-four-two</string>
    <string name="settings_order_by_fox_label">Fox Sports</string>
    <string name="settings_order_by_fox_value" translatable="false">fox-sports</string>
    <string name="settings_order_by_google_label">Google News</string>
    <string name="settings_order_by_google_value" translatable="false">google-news</string>
    <string name="settings_order_by_hacker_label">Hacker News</string>
    <string name="settings_order_by_hacker_value" translatable="false">hacker-news</string>
    <string name="settings_order_by_ign_label">IGN</string>
    <string name="settings_order_by_ign_value" translatable="false">ign</string>
    <string name="settings_order_by_inde_label">Independent</string>
    <string name="settings_order_by_inde_value" translatable="false">independent</string>
    <string name="settings_order_by_mash_label">Mashable</string>
    <string name="settings_order_by_mash_value" translatable="false">mashable</string>
    <string name="settings_order_by_metro_label">Metro</string>
    <string name="settings_order_by_metro_value" translatable="false">metro</string>
    <string name="settings_order_by_mirror_label">Mirror</string>
    <string name="settings_order_by_mirror_value" translatable="false">mirror</string>
    <string name="settings_order_by_mtv_label">MTV News</string>
    <string name="settings_order_by_mtv_value" translatable="false">mtv-news</string>
    <string name="settings_order_by_nat_label">National Geographic</string>
    <string name="settings_order_by_nat_value" translatable="false">national-geographic</string>
    <string name="settings_order_by_new_sc_label">New Scientist</string>
    <string name="settings_order_by_new_sc_value" translatable="false">new-scientist</string>
    <string name="settings_order_by_newsw_label">Newsweek</string>
    <string name="settings_order_by_newsw_value" translatable="false">newsweek</string>
    <string name="settings_order_by_nfl_label">NFL News</string>
    <string name="settings_order_by_nfl_value" translatable="false">nfl-news</string>
    <string name="settings_order_by_poly_label">Polygon</string>
    <string name="settings_order_by_poly_value" translatable="false">polygon</string>
    <string name="settings_order_by_recode_label">Recode</string>
    <string name="settings_order_by_recode_value" translatable="false">recode</string>
    <string name="settings_order_by_reditt_label">Reddit/r/all</string>
    <string name="settings_order_by_reditt_value" translatable="false">reddit-r-all</string>
    <string name="settings_order_by_reuters_label">Reuters</string>
    <string name="settings_order_by_reuters_value" translatable="false">reuters</string>
    <string name="settings_order_by_t3n_label">T3n</string>
    <string name="settings_order_by_t3n_value" translatable="false">t3n</string>
    <string name="settings_order_by_talk_label">TalkSport</string>
    <string name="settings_order_by_talk_value" translatable="false">talksport</string>
    <string name="settings_order_by_tech_label">TechCrunch</string>
    <string name="settings_order_by_tech_value" translatable="false">techcrunch</string>
    <string name="settings_order_by_techr_label">TechRadar</string>
    <string name="settings_order_by_techr_value" translatable="false">techradar</string>
    <string name="settings_order_by_thee_label">The Economist</string>
    <string name="settings_order_by_thee_value" translatable="false">the-economist</string>
    <string name="settings_order_by_theg_label">The Guardian(UK)</string>
    <string name="settings_order_by_theg_value" translatable="false">the-guardian-uk</string>
    <string name="settings_order_by_theh_label">The Hindu</string>
    <string name="settings_order_by_theh_value" translatable="false">the-hindu</string>
    <string name="settings_order_by_thehu_label">The Huffington Post</string>
    <string name="settings_order_by_thehu_value" translatable="false">the-huffington-post</string>
    <string name="settings_order_by_thel_label">The Lad Bible</string>
    <string name="settings_order_by_thel_value" translatable="false">the-lad-bible</string>
    <string name="settings_order_by_then_label">The New York Times</string>
    <string name="settings_order_by_then_value" translatable="false">the-new-york-times</string>
    <string name="settings_order_by_thes_label">The Sport Bible</string>
    <string name="settings_order_by_thes_value" translatable="false">the-sport-bible</string>
    <string name="settings_order_by_thet_label">The Telegraph</string>
    <string name="settings_order_by_thet_value" translatable="false">the-telegraph</string>
    <string name="settings_order_by_theti_label">The Times of India</string>
    <string name="settings_order_by_theti_value" translatable="false">the-times-of-india</string>
    <string name="settings_order_by_thev_label">The Verge</string>
    <string name="settings_order_by_thev_value" translatable="false">the-verge</string>
    <string name="settings_order_by_thew_label">The Wall Street Journal</string>
    <string name="settings_order_by_thew_value" translatable="false">the-wall-street-journal</string>
    <string name="settings_order_by_thewa_label">The Washington Post</string>
    <string name="settings_order_by_thewa_value" translatable="false">the-washington-post</string>
    <string name="settings_order_by_time_label">Time</string>
    <string name="settings_order_by_time_value" translatable="false">time</string>
    <string name="settings_order_by_usa_label">USA Today</string>
    <string name="settings_order_by_usa_value" translatable="false">usa-today</string>
    <string name="search_for_more">Search for more</string>
</resources>
