<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:dialogIcon="@mipmap/ic_launcher"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:icon="@mipmap/ic_launcher"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default_general"
        android:dialogIcon="@drawable/ic_action_general"
        android:entries="@array/settings_order_by_labels_general"
        android:entryValues="@array/settings_order_by_values_general"
        android:icon="@drawable/ic_action_general"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label_general" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default_business"
        android:dialogIcon="@drawable/ic_action_business"
        android:entries="@array/settings_order_by_labels_business"
        android:entryValues="@array/settings_order_by_values_business"
        android:icon="@drawable/ic_action_business"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label_business" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default_tech"
        android:dialogIcon="@drawable/ic_action_tech"
        android:entries="@array/settings_order_by_labels_tech"
        android:entryValues="@array/settings_order_by_values_tech"
        android:icon="@drawable/ic_action_tech"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label_tech" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default_political"
        android:dialogIcon="@drawable/ic_action_politics"
        android:entries="@array/settings_order_by_labels_political"
        android:entryValues="@array/settings_order_by_values_political"
        android:icon="@drawable/ic_action_politics"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label_politics" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default_sport"
        android:dialogIcon="@drawable/ic_action_sport"
        android:entries="@array/settings_order_by_labels_sport"
        android:entryValues="@array/settings_order_by_values_sport"
        android:icon="@drawable/ic_action_sport"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label_sport" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default_entertainment"
        android:dialogIcon="@drawable/ic_action_enter"
        android:entries="@array/settings_order_by_labels_entertainment"
        android:entryValues="@array/settings_order_by_values_entertainment"
        android:icon="@drawable/ic_action_enter"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label_enter" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default_gaming"
        android:dialogIcon="@drawable/ic_action_gaming"
        android:entries="@array/settings_order_by_labels_gaming"
        android:entryValues="@array/settings_order_by_values_gaming"
        android:icon="@drawable/ic_action_gaming"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label_gaming" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default_music"
        android:dialogIcon="@drawable/ic_action_music"
        android:entries="@array/settings_order_by_labels_music"
        android:entryValues="@array/settings_order_by_values_music"
        android:icon="@drawable/ic_action_music"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label_music" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default_science"
        android:dialogIcon="@drawable/ic_action_science"
        android:entries="@array/settings_order_by_labels_science"
        android:entryValues="@array/settings_order_by_values_science"
        android:icon="@drawable/ic_action_science"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label_science" />

</PreferenceScreen>